<resources>
    <string name="app_name">Train Alert</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="noConnections">Daten konnten nicht geladen werden!</string>
    <string name="noConnectionsTitle">Datenfehler!</string>
    <string name="hintEditNach">Nach</string>
    <string name="hintEditVon">Von</string>
    <string name="hintEditVia">Via</string>
    <string name="radioAb">Ab</string>
    <string name="radioAn">An</string>
    <string name="verbindungenButton">Verbindungen suchen</string>
    <string name="verbindungenTitel">Verbindung</string>
    <string name="nachLabel">Nach:</string>
    <string name="vonLabel">Von:</string>
    <string name="abfahrtLabel">Abfahrt:</string>
    <string name="verbindungInfoLabel">Verbindungs-Info</string>
    <string name="datumLabel">Datum:</string>
    <string name="zeitLabel">Zeit (Ab):</string>
    <string name="dauerLabel">Dauer (h)</string>
    <string name="gleisLabel">Gleis</string>
    <string name="verkehrsmittelLabel">Verkehrsmittel</string>
    <string name="title_activity_verbindung_map">Verbindung</string>
    <string name="title_activity_alarm_settings">AlarmSettings</string>
    <string name="title_activity_pass_list">PassList</string>
    <string name="einstellungen_title">Train Alert Einstellungen</string>
    <string name="keineFavoriten">Sie haben noch keine Favoriten</string>
    <string name="title_Favorite">Favoriten</string>
    <string name="title_activity_alarm_view">AlarmView</string>
    <string name="title_activity_standort_map">StandortMap</string>
    <string name="alarm_title">Alarm</string>
    <string name="verbindung_title">Verbindungen</string>
    <string name="favoriten">Favoriten</string>
    <string name="route">Route</string>
    <string name="alarme">Alarme</string>
    <string name="keinAlarm">Sie haben noch keinen Alarm hinzugefügt</string>
    <string name="ok_text">OK</string>
    <string name="fehler_text">Fehler</string>
    <string name="startzielerror_text">Start- und Zielort angeben!</string>
    <string name="orterror_text">Orte müssen verschieden sein!</string>
    <string name="favoriten_tab">Favoriten</string>
    <string name="route_tab">Route</string>
    <string name="standort_tab">Standort</string>
    <string name="nocon_text">Keine Internet Verbindung</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="title_section1">Route</string>
    <string name="title_section2">Alarme</string>
    <string name="title_section3">Favoriten</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_verkehrsinfos">Verkehrsinfos</string>
    <string name="verkehr">Verkehrsinfos</string>
    <string name="title_activity_zug_position_fragment">ZugPositionFragment</string>
    <string name="zugPosition">Zug Position</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="style_title">Style</string>
    <string name="style_bes">Style der App auswählen</string>
    <string name="alarm_bes">Minuten vor der Abfahrt erinnern</string>
    <string name="verbindung_bes">Anzahl angezeigte Verbindungen</string>

    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
</resources>
