<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/einstellungen_title">
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/style_title">
        <ListPreference
            android:key="tastyle"
            android:title="@string/style_bes"
            android:entries=""
            android:entryValues="" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/alarm_title">
        <ListPreference
            android:key="alarmtime"
            android:title="@string/alarm_bes"
            android:entries="@array/alarmzeiten"
            android:entryValues="@array/alarmzeiten_values" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/verbindung_title">
        <ListPreference
            android:key="anzVerbindungen"
            android:title="@string/verbindung_bes"
            android:entries="@array/verbindungen"
            android:entryValues="@array/verbindungen" />
    </PreferenceCategory>
</PreferenceScreen>