<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/route"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <EditText
        android:id="@+id/editVon"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:hint="@string/hintEditVon"
        android:maxLines="1" />


    <EditText
        android:id="@+id/editNach"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editVon"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editVon"
        android:layout_marginTop="25dp"
        android:hint="@string/hintEditNach"
        android:maxLines="1" />

    <EditText
        android:id="@+id/editVia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editNach"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editNach"
        android:layout_marginTop="25dp"
        android:hint="@string/hintEditVia" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/verbindungenButton" />

    <ImageButton
        android:id="@+id/imageButtonVon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/editVon"
        android:background="@null"
        android:src="@android:drawable/ic_menu_mylocation" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="255dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/toggleButtonAb"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:text="@string/radioAb" />

            <RadioButton
                android:id="@+id/toggleButtonAn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/toggleButtonAb"
                android:layout_toEndOf="@+id/toggleButtonAb"
                android:singleLine="true"
                android:text="@string/radioAn" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/buttonTime" />

        <Button
            android:id="@+id/buttonTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButtonNach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageButtonVon"
        android:layout_alignTop="@+id/editNach"
        android:background="@null"
        android:src="@android:drawable/ic_menu_mylocation" />

    <ImageButton
        android:id="@+id/imageButtonVia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageButtonVon"
        android:layout_alignTop="@+id/editVia"
        android:background="@null"
        android:src="@android:drawable/ic_menu_mylocation" />

    <ImageButton
        android:id="@+id/deleteVon"
        android:layout_width="22dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/editVon"
        android:layout_toStartOf="@+id/imageButtonNach"
        android:background="@null"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:cropToPadding="false"
        android:focusable="false"
        android:focusableInTouchMode="false"

        android:longClickable="false"
        android:scaleType="fitStart"
        android:src="@drawable/delicon" />

    <ImageButton
        android:id="@+id/deleteNach"
        android:layout_width="22dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/editNach"
        android:layout_alignStart="@+id/deleteVon"
        android:background="@null"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:cropToPadding="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:scaleType="fitStart"
        android:src="@drawable/delicon" />

    <ImageButton
        android:id="@+id/deleteVia"
        android:layout_width="22dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/editVia"
        android:layout_toStartOf="@+id/imageButtonVia"
        android:background="@null"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:cropToPadding="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:scaleType="fitStart"
        android:src="@drawable/delicon" />


</RelativeLayout>
