<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/activity_main"
    android:clickable="false">




    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editVon"
        android:maxLines="1"
        android:hint="@string/hintEditVon"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editNach"
        android:maxLines="1"
        android:hint="@string/hintEditNach"
        android:layout_below="@+id/editVon"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editVon"
        android:layout_marginTop="25dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editVia"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/editNach"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editNach"
        android:hint="@string/hintEditVia" />




    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/radioAb"
            android:id="@+id/toggleButtonAb"
            android:checked="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/radioAn"
            android:id="@+id/toggleButtonAn"
            android:singleLine="true"
            android:layout_alignTop="@+id/toggleButtonAb"
            android:layout_toEndOf="@+id/toggleButtonAb" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verbindungenButton"
        android:id="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonVon"
        android:src="@android:drawable/ic_menu_mylocation"
        android:background="@null"
        android:layout_alignTop="@+id/editVon"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDate"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/buttonTime" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonTime"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonNach"
        android:src="@android:drawable/ic_menu_mylocation"
        android:background="@null"
        android:layout_alignTop="@+id/editNach"
        android:layout_alignStart="@+id/imageButtonVon" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonVia"
        android:src="@android:drawable/ic_menu_mylocation"
        android:background="@null"
        android:layout_alignTop="@+id/editVia"
        android:layout_alignStart="@+id/imageButtonVon" />

    <ImageButton
        android:layout_width="22dp"
        android:layout_height="40dp"
        android:id="@+id/deleteVon"
        android:src="@drawable/delicon"
        android:cropToPadding="false"
        android:background="@null"
        android:clickable="false"
        android:baselineAlignBottom="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:scaleType="fitStart"
        android:layout_toStartOf="@+id/imageButtonNach" />
    <ImageButton
        android:layout_width="22dp"
        android:layout_height="40dp"
        android:id="@+id/deleteNach"
        android:src="@drawable/delicon"
        android:cropToPadding="false"
        android:background="@null"
        android:clickable="false"
        android:baselineAlignBottom="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:scaleType="fitStart"
        android:layout_alignBottom="@+id/editNach"
        android:layout_alignStart="@+id/deleteVon" />

    <ImageButton
        android:layout_width="22dp"
        android:layout_height="40dp"
        android:id="@+id/deleteVia"
        android:src="@drawable/delicon"
        android:cropToPadding="false"
        android:background="@null"
        android:clickable="false"
        android:baselineAlignBottom="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:scaleType="fitStart"
        android:layout_alignBottom="@+id/editVia"
        android:layout_toStartOf="@+id/imageButtonVia" />

    <ImageButton
        android:layout_width="22dp"
        android:layout_height="40dp"
        android:id="@+id/imageButton9"
        android:src="@drawable/delicon"
        android:cropToPadding="false"
        android:background="@null"
        android:clickable="false"
        android:baselineAlignBottom="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:scaleType="fitStart"
        android:layout_toEndOf="@+id/buttonTime"
        android:layout_alignTop="@+id/editVon"
         />







</RelativeLayout>
